fix on ie issue

--- a/src/components/AppCenter/style/ImageStore.less
+++ b/src/components/AppCenter/style/ImageStore.less
@@ -41,7 +41,8 @@
         padding: 20px 0 0 50px;
         cursor: pointer;
         img {
-          height: 90px;
+          max-height: 100%;
+          max-width: 90px;
         }
       }
       .intro {
